# computational_geometry

./: CMakeLists.txt  README.md  geom_primitives.h  main.cpp  output.txt
graham_hull/: CMakeLists.txt  README.md  geom_primitives.h  main.cpp  output.txt
graham_hull/input_provider/: input_provider.cpp
graham_hull/output_provider/: output_provider.cpp  output_provider.h
graham_hull/problem_solver/: problem_solver.cpp  problem_solver.h
graham_hull/tests/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt
input_provider/: input_provider.h
points_on_lines/: geom_primitives.h
points_on_lines/input_provider/: input_provider.cpp
points_on_lines/output_provider/: output_provider.cpp  output_provider.h
points_on_lines/problem_solver/: problem_solver.h
points_on_lines/tests/: 2.txt
problem_solver/: problem_solver.cpp  problem_solver.h
tests/: 0.txt
